refactor(order): improve order service api
